<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity"
        android:orientation="vertical"
        android:weightSum="1">

        <include android:id="@+id/appbar"
            layout="@layout/toolbar" />

        <TextView
            android:text="@string/app_name"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/app_version"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/app_description"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="fill_parent"/>

        </LinearLayout>



        <ImageView
            android:id="@+id/imgDonate"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_gift"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="Donar"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="fill_parent" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"

            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <TextView
                android:text="@string/label_contact_data"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_height="fill_parent" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"

            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp">

            <ImageView
                android:id="@+id/imgDeveloper"
                android:src="@drawable/ic_user_gray"
                android:text="@string/author"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"

                android:layout_height="fill_parent"
                android:paddingRight="5dp"/>

            <TextView
                android:text="@string/developer_name"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_height="fill_parent" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgMail"
                android:src="@drawable/ic_mail_gray"
                android:text="@string/mail_tag"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="fill_parent"
                android:paddingRight="5dp"/>

            <TextView
                android:text="@string/mail"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/imgPhone"
                android:src="@drawable/ic_phone_gray"
                android:text="@string/phone_tag"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingRight="5dp"/>

            <TextView
                android:text="@string/phone"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_height="fill_parent" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>